--- a/css/my.css
+++ b/css/my.css
@@ -74,6 +74,16 @@ footer{
   color: yellow;
 }
 
+.fa-linkedin {
+  color: #00cdcd;
+  font-size: 2.0em;
+  transition: .3s ease-in-out;
+}
+
+.fa-linkedin:hover {
+  color: yellow;
+}
+
 .fa-file {
   color: #00cdcd;
   font-size: 2.0em;
