--- a/css/my.css
+++ b/css/my.css
@@ -67,7 +67,7 @@ footer{
 .fa-github {
   color: #00cdcd;
   font-size: 2.0em;
-  transition: .3s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .fa-github:hover {
@@ -77,7 +77,7 @@ footer{
 .fa-linkedin {
   color: #00cdcd;
   font-size: 2.0em;
-  transition: .3s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .fa-linkedin:hover {
@@ -87,7 +87,7 @@ footer{
 .fa-file-alt {
   color: #00cdcd;
   font-size: 2.0em;
-  transition: .3s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .fa-file-alt:hover {
@@ -97,7 +97,7 @@ footer{
 .fa-envelope {
   color: #00cdcd;
   font-size: 2.0em;
-  transition: .3s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .fa-envelope:hover {
@@ -112,6 +112,16 @@ footer{
 .meee {
   text-align: center;
   margin-bottom: .3rem;
+}
+
+.card-link:hover {
+  color: #e3085d;
+  text-decoration: underline;
+}
+
+.card-link:visited {
+  color: #e3085d;
+  text-decoration: none;
 }
 
 .featurette-divider {
